[tool.poetry]
name = "sklearn-deap"
version = "0.3.0"
description = "Use evolutionary algorithms instead of gridsearch in scikit-learn."
authors = ["Rodrigo"]
license = "MIT"
readme = "README.md"
packages = [{include = "sklearn_deap"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
scipy = "^1.9.3"
deap = "^1.3.3"
scikit-learn = "^1.2.0"
pytest-profiling = "^1.7.0"
cython = "^0.29.32"
pandas = "^1.5.2"
setuptools = "^65.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core", "Cython", "setuptools","wheel"]
build-backend = "poetry.core.masonry.api"
